# pyclassify-image-to-gray-or-color

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyclassify_image_to_gray_or_color/: __init__.py  pyclassify_image_to_gray_or_color.py
tests/unit/: conftest.py
tests/unit/pyclassify_image_to_gray_or_color/: test_pyclassify_image_to_gray_or_color.py
